--- a/src/main/resources/static/_styles/tree.css
+++ b/src/main/resources/static/_styles/tree.css
@@ -1,59 +1,35 @@
-
 .tree * {
     list-style-type: none;
 }
 
+ul.tree,
+.tree span {
+    cursor: pointer;
+    padding-top: 10px;
+}
+.tree li {
+    display: grid;
+    align-items: center; /* Centraliza os itens flex (o link) verticalmente */
+    justify-content: center; /* Se você também quiser centralizar horizontalmente */
+    /* Outros estilos do li */
+}
+
+
+.tree li h1 {
+    position: relative;
+    /* Necessário para posicionar os ::before e ::after */
+    text-decoration: none;
+    /* Remove o sublinhado padrão */
+    color: #2574a9;    
+    font-size: 1em;
+
+}
+
 .tree li a {
     color: #2574a9;
-    text-decoration: none;
-    font-size: 0.6em;
-}
-
-
-.tree ul {
-    padding-left: 25px;
-}
-
-ul.tree, .tree li {
-    padding-left: 0px;
-    padding-top: 5px;
-    cursor: pointer;
-}
-
-ul.tree, ul.tree ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-} 
-
-ul.tree ul {
-    margin-left: 10px;
-}
-
-ul.tree li {
-    margin: 0;
-    margin: 0 9px;
-    padding: 0 7px;
-    border-left:1px solid #2574a9;
-
-}
-
-ul.tree li:last-child {
-    border-left:none;
-}
-
-ul.tree li:before {
-    position:relative;
-    top:-0.3em;
-    height:1em;
-    width:12px;
-    color:white;
-    border-bottom:1px solid #2574a9;
-    content:"";
-    display:inline-block;
-    left:-7px;
-}
-
-ul.tree li:last-child:before {
-    border-left:1px solid #2574a9;   
+    font-family: "Taxi Driver";
+    font-size: 0.4em;
+    line-height: 1.5;
+    padding-top: 0;
+    /* Outros estilos do link */
 }
